--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>RecipeDirectory</title>
+    <title>Recipe Directory</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -14,7 +14,7 @@
 
     {{content-for 'head-footer'}}
   </head>
-  <body>
+  <body class="brown lighten-5">
     {{content-for 'body'}}
 
     <script src="assets/vendor.js"></script>
